# CSS382-DYOP-Capstone

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PISAN-Suggest.md  Procfile  README.md  capstone.db-info  capstone.db-shm  capstone.db-wal  capstone_antigravity_prompt.md  config.yaml  docker-compose.yml  fly.toml  pyproject.toml  railway.json  test_dummy.py  transcript.json
.github/workflows/: ci.yml  fly-deploy.yml
src/capstone/: __init__.py  __main__.py  api.py  cli.py  config.py  firstrun.py  graph.py  ranker.py  recommender.py  scheduling.py
src/capstone/db/: __init__.py  connection.py  schema.py
src/capstone/deploy/: __init__.py  boot.py
src/capstone/llm/: __init__.py  backend.py  hardware.py  reasoner.py  redact.py
src/capstone/scrapers/: __init__.py  base.py  catalog.py  ratemyprofessor.py  timeschedule.py
src/capstone/scrapers/programs/: __init__.py  _ias_base.py  applied_computing.py  biology.py  business.py  csse.py  (+19 more)
src/capstone/transcript/: __init__.py  models.py  parser.py
src/capstone/ui/: __init__.py  index.html
tests/: conftest.py  generate_fixture_pdfs.py  inject_landing.py  inject_v2.py  inject_v3.py  inject_v4.py  inject_v5.py  inject_v6.py  inject_v7.py  test_all_majors.py  test_api.py  test_catalog_scraper.py  test_db_schema.py  test_groq_backend.py  test_llm_validation.py  test_pdf_pipeline.py  test_phase5_majors.py  test_prereq_graph.py  test_program_scrapers.py  test_ratemyprofessor.py  test_recommender.py  test_scheduling.py  test_synergies.py  test_transcript_parser.py  test_turso_connection.py
