[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone"
version = "0.1.0"
description = "UW Bothell Course Recommendation Application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Krish Marpuri"},
]
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "pydantic>=2.0",
    "pdfplumber>=0.11",
    "networkx>=3.2",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pypdf>=4.0",
    "fastapi>=0.110",
    "httpx>=0.27",
]
llm = [
    "ollama>=0.3",
    "psutil>=5.9",
    "groq>=0.11",
    "python-dotenv>=1.0",
]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
pdf = [
    "pypdf>=4.0",
    "pdf2image>=1.17",
    "pytesseract>=0.3",
]
turso = [
    # Hosted libSQL (Turso) driver for the deployed app. Local dev and
    # the test suite use the stdlib sqlite3 module and do NOT need this.
    "libsql>=0.1.11",
]

[project.scripts]
capstone = "capstone.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
capstone = ["ui/*.html", "ui/*.css", "ui/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
